2012-07-02  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSBundle.m: Attempted fix for bug #34191 ... change framework
        class association to keep a map of loaded frameworks/bundles by class
        for quick lookup and alter code to check the runtime for new frameworks
        if we are asked for the bundle for a class and we can't find it.

2012-06-27  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSScanner.m: Fix missing 'else' which was causing a
        memory leak and minor performance degradation.

2012-06-12  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSPropertyList.m: Check for nil property list argument.

2012-06-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/unix/GSRunLoopCtxt.m (-pollUntil:within:): Fix previous
	change to compile again when using select() instead of poll().

2012-06-06  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSSocketPort.m:
        * Source/unix/GSRunLoopCtxt.m:
        * Source/NSMessagePort.m:
        * Source/win32/GSRunLoopCtxt.m:
        Modify code for getting file descriptors to cope with an unlimited
        number (allocate buffer on heap if necessary) for server processes
        with very large numbers of distributed object connections.

2012-04-30 Riccardo Mottola <rm@gnu.org>

	* Source/NSString:
	Do not include malloc on OpenBSD to avoid warning (and include
        stdlib always).

2012-04-29 Riccardo Mottola <rm@gnu.org>

	* Source/common.h:
	Extend David's hack to all known non-glibc platforms

2012-02-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSArchiver.m:
	* Source/NSUnarchiver.m:
	* Source/NSPortCoder.m:
	* Source/Coder.m:
	Updates to cope with the fact that some BSD ports of gnustep-base
	used incorrect versioning, and that people have released Gorm
	files with versioning incompatible with current releases.
	1. dissociate coder -systemVersion from the actual system version,
	so that if people mess with the gnustep-base version, their